date of CHANGES

--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@ commands!</p>
 
 <p class="changes">Last changes 
 <!--    !grep "^-" CHANGES | head -1     --> 
---- Mi 24. Feb 14:14:56 CET 2021
+--- Wed Mar 3 15:08:07 CET 2021
 &nbsp;&nbsp;&nbsp;(<a href="CHANGES">Details</a>)
 </p>
 <p>
