Update webpage to GAP 4.12.0

--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@ commands!</p>
 
 <p class="changes">Last changes 
 <!--    !grep "^-" CHANGES | head -1     --> 
---- Wed Mar 3 15:08:07 CET 2021
+--- Di 23. Aug 01:16:54 CEST 2022
 &nbsp;&nbsp;&nbsp;(<a href="CHANGES">Details</a>)
 </p>
 <p>
