Infos on upgrade to 4.12.1.

--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@ commands!</p>
 
 <p class="changes">Last changes 
 <!--    !grep "^-" CHANGES | head -1     --> 
---- Di 23. Aug 01:16:54 CEST 2022
+--- Mi 9. Nov 13:28:16 CET 2022
 &nbsp;&nbsp;&nbsp;(<a href="CHANGES">Details</a>)
 </p>
 <p>
