--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@ commands!</p>
 
 <p class="changes">Last changes 
 <!--    !grep "^-" CHANGES | head -1     --> 
---- Mi 9. Nov 13:28:16 CET 2022
+--- Mo 19. Dez 19:04:00 CET 2022
 &nbsp;&nbsp;&nbsp;(<a href="CHANGES">Details</a>)
 </p>
 <p>
