--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@ commands!</p>
 
 <p class="changes">Last changes 
 <!--    !grep "^-" CHANGES | head -1     --> 
---- Mo 19. Dez 19:04:00 CET 2022
+--- Mon 18 Mar 2024 07:05:01 PM CET
 &nbsp;&nbsp;&nbsp;(<a href="CHANGES">Details</a>)
 </p>
 <p>
@@ -73,7 +73,7 @@ href="https://www.gap-system.org/Download/">
 <p>
 You need: a machine with PC architecture (x86_64 compatible) 
 running under 
-<a href="http://www.linux.org">Linux</a>, a directory with about 3100&nbsp;MB of
+<a href="http://www.linux.org">Linux</a>, a directory with about 4000&nbsp;MB of
 free space and the <code>rsync</code> program (if you don't have
 <code>rsync</code>, there is certainly a package with this name in your
 Linux distribution). 
