Small adjustments for GAP 4.14.0

--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@ commands!</p>
 
 <p class="changes">Last changes 
 <!--    !grep "^-" CHANGES | head -1     --> 
---- Mon 18 Mar 2024 07:05:01 PM CET
+--- Mon 16 Dec 2024 01:47:37 PM CET
 &nbsp;&nbsp;&nbsp;(<a href="CHANGES">Details</a>)
 </p>
 <p>
@@ -66,14 +66,14 @@ network bandwidth.
 <h2>How to get <span class="pkg">GAP</span> via this service</h2>
 <p>
 (and not directly from the <a
-href="https://www.gap-system.org/Download/">
+href="https://www.gap-system.org/install/">
 <span class="pkg">GAP</span> site</a>.)
 </p>
 
 <p>
 You need: a machine with PC architecture (x86_64 compatible) 
 running under 
-<a href="http://www.linux.org">Linux</a>, a directory with about 4000&nbsp;MB of
+<a href="https://www.linux.org">Linux</a>, a directory with about 4000&nbsp;MB of
 free space and the <code>rsync</code> program (if you don't have
 <code>rsync</code>, there is certainly a package with this name in your
 Linux distribution). 
